--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,23 +1,21 @@
-FROM python:3.12-slim
+# Stage 1: Base stage
+FROM python:3.12-slim AS base
 
 ARG USERNAME=appuser
 ARG USER_UID=1001
 ARG USER_GID=$USER_UID
+ARG ENVIRONMENT=production
 
-# Install necessary packages and Zsh
+# Install necessary packages
 RUN set -ex \
     && apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get install -y --no-install-recommends \
         git \
         curl \
         procps \
-        zsh \
         wget \
         openssh-client \
-        fonts-powerline \
         tzdata \
-        gcc \
-        python3-dev \
     && groupadd --gid $USER_GID $USERNAME \
     && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
     # Set timezone to PDT
@@ -30,45 +28,56 @@ RUN set -ex \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/*
 
-# Set Zsh as the default shell for the user by modifying /etc/passwd
-RUN sed -i "s|/home/${USERNAME}:/bin/sh|/home/${USERNAME}:/usr/bin/zsh|" /etc/passwd
+ENV WORKDIR_PATH=/code
+WORKDIR $WORKDIR_PATH
+
+COPY --chown=$USERNAME:$USER_GID ./src ./src
+RUN python3 -m pip install --upgrade pip \
+    && pip install --no-cache-dir --upgrade --disable-pip-version-check -r src/requirements.txt 
+
+# Stage 2: Development stage
+FROM base AS development
+
+# Conditionally install and configure Oh My Zsh for development environment
+ARG USERNAME
+ARG USER_UID
+ARG USER_GID
+
+# Conditionally install and configure Oh My Zsh for development environment
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    zsh \
+    fonts-powerline \
+    gcc \
+    python3-dev \
+    && apt-get upgrade -y \
+    && apt-get autoremove -y \
+    && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/* && \
+    # Set Zsh as the default shell for the user by modifying /etc/passwd
+    sed -i "s|/home/${USERNAME}:/bin/sh|/home/${USERNAME}:/usr/bin/zsh|" /etc/passwd
 
 # Switch to non-root user
 USER $USERNAME
 
-# Install Oh My Zsh
-RUN sh -c "$(wget https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh -O -)" --unattended
+RUN \
+    # Install Oh My Zsh
+    sh -c "$(wget https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh -O -)" --unattended && \
+    # Install Zsh plugins and theme
+    git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-/home/${USERNAME}/.oh-my-zsh/custom}/plugins/zsh-autosuggestions && \
+    git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-/home/${USERNAME}/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting && \
+    git clone https://github.com/zsh-users/zsh-completions ${ZSH_CUSTOM:-/home/${USERNAME}/.oh-my-zsh/custom}/plugins/zsh-completions && \
+    git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-/home/${USERNAME}/.oh-my-zsh/custom}/themes/powerlevel10k && \
+    # Customize Zsh prompt
+    echo 'if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then' >> /home/${USERNAME}/.zshrc \
+    && echo '  source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"' >> /home/${USERNAME}/.zshrc \
+    && echo 'fi' >> /home/${USERNAME}/.zshrc \
+    && sed -i 's/ZSH_THEME="robbyrussell"/ZSH_THEME="powerlevel10k\/powerlevel10k"/' /home/${USERNAME}/.zshrc \
+    && sed -i 's/plugins=(git)/plugins=(git zsh-autosuggestions zsh-syntax-highlighting zsh-completions)/' /home/${USERNAME}/.zshrc \
+    && echo "source \${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh" >> /home/${USERNAME}/.zshrc \
+    && echo "source $HOME/.p10k.zsh" >> /home/${USERNAME}/.zshrc 
 
-# Install Zsh plugins and theme
-RUN git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions \
-    && git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting \
-    && git clone https://github.com/zsh-users/zsh-completions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-completions \
-    && git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/themes/powerlevel10k
-
-# Copy the Powerlevel10k configuration file
+# Conditionally copy Powerlevel10k configuration file for development environment
 COPY --chown=$USERNAME:$USER_GID .dot_files/.p10k.zsh /home/${USERNAME}/.p10k.zsh
-
-# Customize Zsh prompt
-RUN echo 'if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then' >> ~/.zshrc \
-    && echo '  source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"' >> ~/.zshrc \
-    && echo 'fi' >> ~/.zshrc \
-    && sed -i 's/ZSH_THEME="robbyrussell"/ZSH_THEME="powerlevel10k\/powerlevel10k"/' ~/.zshrc \
-    && sed -i 's/plugins=(git)/plugins=(git zsh-autosuggestions zsh-syntax-highlighting zsh-completions)/' ~/.zshrc \
-    && echo "source \${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh" >> ~/.zshrc \
-    && echo "source ~/.p10k.zsh" >> ~/.zshrc
-
-# Set the working directory
-ENV WORKDIR_PATH=/code
-WORKDIR $WORKDIR_PATH
-
-COPY --chown=$USERNAME:$USER_GID ./requirements.txt ./
-RUN python3 -m pip install --upgrade pip \
-    && pip install --no-cache-dir --upgrade --disable-pip-version-check -r requirements.txt 
-
-COPY --chown=$USERNAME:$USER_GID ./src ./src
-
-# Install Jupyter
-RUN pip install jupyter
 
 # Copy the SSH keys (Ensure .ssh directory exists in the build context)
 COPY --chown=$USERNAME:$USER_GID .ssh/ssh_key* /home/${USERNAME}/.ssh/
@@ -77,10 +86,28 @@ RUN chmod 700 /home/${USERNAME}/.ssh && chmod 600 /home/${USERNAME}/.ssh/* && ch
 # Add SSH key to the SSH agent
 RUN echo "eval \$(ssh-agent -s) && ssh-add /home/${USERNAME}/.ssh/ssh_key" >> /home/${USERNAME}/.zshrc
 
-ENV PATH="/home/${USERNAME}/.local/bin:${PATH}"
+# Install Jupyter for development environment
+RUN pip install jupyter 
 
 # Change the permissions of the script to make it executable.
-RUN chmod +x ${WORKDIR_PATH}/src/entrypoint.sh
+RUN chmod +x src/entrypoint.sh
 
-# Start the main application and keep the container running
-CMD ["sh", "src/entrypoint.sh"]
+# Use the entrypoint script to start the main application and keep the container running
+ENTRYPOINT ["src/entrypoint.sh"]
+
+# Stage 3: Final stage
+FROM base AS final
+ARG ENVIRONMENT
+ARG USERNAME
+
+# Ensure bash is the default shell
+RUN chsh -s /bin/bash $USERNAME
+
+# Switch to non-root user
+USER $USERNAME
+
+# Change the permissions of the script to make it executable.
+RUN chmod +x src/entrypoint.sh
+
+# Use the entrypoint script to start the main application and keep the container running
+ENTRYPOINT ["src/entrypoint.sh"]
